--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "wa_auto_furni",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.ts",
   "scripts": {
-    "start": "node src/index.js",
+    "build": "tsc",
+    "start": "node dist/index.ts",
+    "dev": "ts-node src/index.ts",
+    "nodemon": "nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,9 +14,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@ngrok/ngrok": "^1.5.1",
     "axios": "^1.10.0",
     "body-parser": "^2.2.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "@types/body-parser": "^1.19.6",
+    "@types/express": "^5.0.3",
+    "@types/node": "^20.0.0",
+    "ts-node": "^10.9.0",
+    "typescript": "^5.0.0",
+    "nodemon": "^3.0.0"
   }
 }
