--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.4.1",
     "@ngrok/ngrok": "^1.5.1",
     "axios": "^1.10.0",
     "body-parser": "^2.2.0",
@@ -24,8 +25,8 @@
     "@types/body-parser": "^1.19.6",
     "@types/express": "^5.0.3",
     "@types/node": "^20.0.0",
+    "nodemon": "^3.0.0",
     "ts-node": "^10.9.0",
-    "typescript": "^5.0.0",
-    "nodemon": "^3.0.0"
+    "typescript": "^5.0.0"
   }
 }
